<resources>
    <string name="app_name">StreamChat</string>
    <string name="api_key">----</string>
    <!--login-->
    <string name="chat_app">Chat App</string>
    <string name="reliable_and_fast">Reliable And Fast</string>
    <string name="first_name">First Name</string>
    <string name="username">User Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="error">Minimum 4 characters allowed</string>

    <!--channel-->
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="channels">Channels</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--nav_drawer-->
    <string name="drawer_logout">Logout?</string>
    <string name="drawer_logout_success">Logged out successfully</string>
    <string name="drawer_logout_msg">Wanna to logout?</string>
</resources>